<resources>
    <string name="app_name">Number Composition</string>
    <string name="number_composition">Состав числа</string>
    <string name="description_rules">Правила игры: перед вами будет три фигуры две снизу и однасверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна чилсу верхней фигуре для этого нужно вставить недоостающие чилсло.

Пример в верхнем круге число 7, в одном из нижних знак вопроса, а в другом чило 4. Значит на месте вопросительного знакдолжно быть число 3. потому что 3 + 4 = 7</string>
    <string name="understand_button">Понятно</string>
    <string name="choose_level">Выберите уровень:</string>
    <string name="test_level">Тестовый</string>
    <string name="easy_level">Легкий</string>
    <string name="normal_level">Средний</string>
    <string name="hard_level">Тяжелый</string>
    <string name="question_mark">\?</string>
    <string name="progress_answers">Правильных ответов %s(миниум %s)</string>
    <string name="required_answers">Необходимое количество ответов: %s</string>
    <string name="your_score">Ваш счет: %s</string>
    <string name="required_percents">Необходимый процент правильных ответов: %s</string>
    <string name="score_percentage">Процент правильных ответов: %s</string>
    <string name="try_again">Попробовать снова</string>
    <string name="reaction">Реакция на результаты</string>
    <string name="brain_logo">Мозг-лого игры</string>
</resources>