<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.GameFinishedFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="315dp"
        android:layout_height="323dp"
        android:contentDescription="@string/reaction"
        app:layout_constraintBottom_toTopOf="@+id/tv_required_answers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_smile" />

    <TextView
        android:id="@+id/tv_required_answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:text="@string/required_answers"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_your_score"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_your_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:text="@string/your_score"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_required_percentage"
        app:layout_constraintTop_toBottomOf="@+id/tv_required_answers" />

    <TextView
        android:id="@+id/tv_required_percentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:text="@string/required_percents"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_score_answers"
        app:layout_constraintTop_toBottomOf="@+id/tv_your_score" />

    <TextView
        android:id="@+id/tv_score_answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"

        android:text="@string/score_percentage"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_try_again"
        app:layout_constraintTop_toBottomOf="@+id/tv_required_percentage" />

    <Button
        android:id="@+id/btn_try_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:text="@string/try_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_score_answers" />

</androidx.constraintlayout.widget.ConstraintLayout>