<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="gameResult"
            type="com.example.numbercomposition.domain.entity.GameResult" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.GameFinishedFragment">

        <ImageView
            android:id="@+id/result_smile"
            android:layout_width="315dp"
            android:layout_height="323dp"
            android:contentDescription="@string/reaction"
            app:layout_constraintBottom_toTopOf="@+id/tv_required_answers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:resultSmile="@{gameResult.winner}"
            tools:srcCompat="@drawable/ic_smile" />

        <TextView
            android:id="@+id/tv_required_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_your_score"
            app:layout_constraintTop_toBottomOf="@+id/result_smile"
            app:requiredAnswers="@{gameResult.gameSettings.minCountOfRightAnswers}"
            tools:text="@string/required_answers" />

        <TextView
            android:id="@+id/tv_your_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_required_percentage"
            app:layout_constraintTop_toBottomOf="@+id/tv_required_answers"
            app:scorePlayer="@{gameResult.countOfRightAnswers}"
            tools:text="@string/your_score" />

        <TextView
            android:id="@+id/tv_required_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_score_answers"
            app:layout_constraintTop_toBottomOf="@+id/tv_your_score"
            app:requiredPercentage="@{gameResult.gameSettings.minPercentOfRightAnswer}"
            tools:text="@string/required_percents" />

        <TextView
            android:id="@+id/tv_score_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_try_again"
            app:layout_constraintTop_toBottomOf="@+id/tv_required_percentage"
            app:rightAnswersPercentage="@{gameResult}"
            tools:text="@string/score_percentage" />

        <Button
            android:id="@+id/btn_try_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:text="@string/try_again"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_score_answers" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
